# architect-studio

./: .gitignore  README.md  netlify.toml  package-lock.json  package.json
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src/: App.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/scripts/: gen_icon.py
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/components/ai/: AIGeneratorDialog.tsx  AIReviewDialog.tsx  OptimizeDialog.tsx
apps/desktop/src/components/canvas/: ArchitectureCanvas.tsx  NodeContextMenu.tsx
apps/desktop/src/components/edges/: AnimatedEdge.tsx
apps/desktop/src/components/interview/: InterviewPanel.tsx
apps/desktop/src/data/: components.ts  regions.ts  templates.ts
apps/desktop/src/hooks/: useAiStatus.ts  useMetrics.ts  useSimulation.ts  useValidation.ts
apps/desktop/src/lib/: advisor.ts  category-style.ts  format.ts  graph.ts  icons.ts  id.ts  metrics.ts  node-factory.ts  validation.ts
apps/desktop/src/pages/: BuilderPage.tsx  InterviewPage.tsx
apps/desktop/src/services/: export.ts
apps/desktop/src/store/: canvas-store.ts  index.ts  project-store.ts  simulation-store.ts  ui-store.ts
apps/desktop/src/types/: component.ts  edge.ts  index.ts  node.ts  project.ts  simulation.ts  validation.ts
services/ai/: build_sidecar.py  server.py
services/ai/app/: __init__.py  catalog.py  heuristics.py  main.py  models.py  providers.py  templates.py
(+20 files in other folders)
